--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
-    "@angular/fire": "^6.1.4",
     "@angular/forms": "~9.1.13",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
-    "firebase": "^8.2.1",
-    "ngx-pagination": "^5.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
