--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.13",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "ngx-pagination": "^5.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
