--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3",
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "ngx-pagination": "^5.0.0"
   }
 }
