--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,10 +9,11 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.d.ts"
   ],
   "exclude": [
+    "src/**/*.spec.ts",
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/environments/environment.prod.ts"
   ]
 }
