--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@ctrl/ngx-emoji-mart": "^4.1.1",
+    "angular-feather": "^6.1.0",
     "firebase": "^8.2.4",
+    "giphy-api": "^2.0.1",
     "jquery": "^3.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
+    "skeleton-css": "^2.0.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
