--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.13",
+    "@angular/animations": "^11.1.0",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.13",
     "@auth0/angular-jwt": "^5.0.2",
     "jwt-decode": "^3.1.2",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
