--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@auth0/angular-jwt": "^5.0.2",
+    "ngx-toastr": "^13.2.0",
+    "jwt-decode": "^3.1.2",
     "firebase": "^8.2.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
