--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
     "@angular/core": "~9.1.13",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~9.1.13",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
-    "ngx-toastr": "^12.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ctrl/ngx-emoji-mart": "^4.1.1",
     "angular-feather": "^6.1.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.2.4",
     "giphy-api": "^2.0.1",
     "jquery": "^3.5.1",
-    "@auth0/angular-jwt": "^5.0.2",
     "jwt-decode": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "skeleton-css": "^2.0.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
     "xlsx": "^0.16.9",
-    "file-saver": "^2.0.5",
-    "ngx-bootstrap": "^6.2.0",
-    "ngx-pagination": "^5.0.0",
-    "ng2-search-filter": "^0.5.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.13",
